--- a/b.html
+++ b/b.html
@@ -50,15 +50,15 @@
 
   <div class="gallery">
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 1">
+      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 1" width="300">
       <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
     </div>
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 2">
+      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 2" width="300">
       <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
     </div>
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 3">
+      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 3" width="300">
       <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
     </div>
   </div>
