--- a/b.html
+++ b/b.html
@@ -50,16 +50,16 @@
 
   <div class="gallery">
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 1" width="300">
-      <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
+      <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 1" width="300">
+      <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
     </div>
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 2" width="300">
-      <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
+      <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 2" width="300">
+      <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
     </div>
     <div class="photo">
-      <img src="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" alt="Ảnh 3" width="300">
-      <a href="https://drive.google.com/uc?export=download&id=1VffO72I0HcR3wGFaG5tyVvlb8FE-b41y" download>📥 Tải ảnh</a>
+      <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 3" width="300">
+      <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
     </div>
   </div>
 
